#182 - visible scroll bar fixes

--- a/js/reveal/css/reveal.css
+++ b/js/reveal/css/reveal.css
@@ -526,7 +526,7 @@ body {
 
 .reveal {
 	position: relative;
-	width: 90%;
+	width: 100%;
 	height: 100%;
 	-ms-touch-action: none;
 }
